<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.kristaappel.jobspot.fragments.JobInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp">

            <Button
                android:id="@+id/jobInfo_button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:tint="@color/colorAccent"
                android:drawableTop="@android:drawable/ic_menu_share"
                android:text="Save"
                android:textColor="@color/colorAccent"
                android:drawableTint="@color/colorPrimary"
                android:textSize="10sp"
                app:srcCompat="?attr/actionModeShareDrawable"
                android:contentDescription="@string/share" />

            <Button
                android:id="@+id/jobInfo_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:layout_marginStart="4dp"
                android:tint="@color/colorAccent"
                android:drawableTop="@drawable/ic_star_unsaved"
                android:text="Save"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                app:srcCompat="@drawable/ic_star_unsaved"
                android:contentDescription="@string/save" />

            <Button
                android:id="@+id/jobInfo_button_applied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/applied"
                android:drawableTop="@drawable/ic_check_unchecked"
                android:scaleType="fitCenter"
                android:text="Applied"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                app:srcCompat="@drawable/ic_check_unchecked" />

        </LinearLayout>

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </WebView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            android:text="@string/powered_bycareeronestop"
            android:textSize="8sp" />

    </LinearLayout>





</FrameLayout>
