<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/textView_applied_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:text="@string/title"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_applied_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_applied_title"
        android:layout_below="@+id/textView_applied_title"
        android:layout_marginEnd="54dp"
        android:text="@string/company"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_applied_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_applied_company"
        android:layout_alignStart="@+id/textView_applied_company"
        android:text="@string/date"
        android:textAlignment="textStart"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="54dp"
        android:textColor="?android:attr/textColorSecondaryInverseNoDisable" />

    <ImageButton
        android:id="@+id/appliedJobs_delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView_applied_title"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center_vertical"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_trash" />

</RelativeLayout>